# TextECode

./: README.md
.github/workflows/: build-native-bridge.yml  build-python-package.yml  test-native-bridge-release.yml
TextECode/: TextECodeGenerator.cs  TextECodeRestorer.cs
TextECode.NativeBridge/: Exports.cs  ILLink.Descriptors.xml  TextECode.NativeBridge.csproj
TextECode/Internal/: FormInfoRestorer.cs  FormSnapshotGenerator.cs  PendingFormSnapshotInfo.cs
TextECode/Internal/ProgramElems/User/: UserFormDataType.cs
TextECode/Model/: FormSnapshotModel.cs  ProjectModel.cs  TextECodeJsonContext.cs
python/: README.md  pyproject.toml  setup.py
python/src/textecode/: __init__.py  _native.py  api.py  cli.py  errors.py
python/tests/: test_api.py  test_unit.py
python/tools/: vendor_native.py
tests/: python_form_generate_test.py  python_real_world_test.py  python_smoke_test.py
tests/assets/full_project/: full.eproject  full.eproject.order
tests/assets/full_project/src/: @Constant.ecode  @Global.ecode  @Struct.ecode  AppMain.ecode
tests/assets/full_project/src/@Resource/: HelpDoc.txt
tests/assets/full_project/src/Features/: Helper.ecode
tests/assets/minimal_project/: minimal.eproject
