[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textecode"
version = "0.2.5"
description = "Python bindings for the TextECode NativeAOT bridge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "OpenEpl contributors"}
]
keywords = ["epl", "textecode", "e-language", "python", "ctypes"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/wstjf123/TextECode"
Repository = "https://github.com/wstjf123/TextECode"
Issues = "https://github.com/wstjf123/TextECode/issues"

[project.scripts]
textecode = "textecode.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
textecode = ["py.typed", "bin/win-x64/*.dll"]
